@@ -43,6 +43,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #11673: Fix multiprocessing Array and RawArray constructors to accept a
+  size of type 'long', rather than only accepting 'int'.
+
 - Issue #10042: Fixed the total_ordering decorator to handle cross-type
   comparisons that could lead to infinite recursion.
 
